tests/baselines/reference/mergedInterfacesWithConflictingPropertyNames.errors.txt
tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts(6,5): error TS2717: Subsequent property declarations must have the same type.  Property 'x' has type 'string' at tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts 1:4, but here has type 'number'.
tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts(15,9): error TS2717: Subsequent property declarations must have the same type.  Property 'x' has type 'T' at tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts 10:8, but here has type 'number'.
tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts(39,9): error TS2717: Subsequent property declarations must have the same type.  Property 'x' has type 'T' at tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts 32:8, but here has type 'number'.


==== tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts (3 errors) ====
    interface A {
        x: string; // error
    }
    
    interface A {
        x: number;
        ~
!!! error TS2717: Subsequent property declarations must have the same type.  Property 'x' has type 'string' at tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts 1:4, but here has type 'number'.
    }
    
    module M {
        interface A<T> {
            x: T;
        }
    
        interface A<T> {
            x: number;  // error
            ~
!!! error TS2717: Subsequent property declarations must have the same type.  Property 'x' has type 'T' at tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts 10:8, but here has type 'number'.
        }
    }
    
    module M2 {
        interface A<T> {
            x: T;
        }   
    }
    
    module M2 {
        interface A<T> {
            x: number;  // ok, different declaration space than other M2
        }
    }
    
    module M3 {
        export interface A<T> {
            x: T;
        }
    }
    
    module M3 {
        export interface A<T> {
            x: number;  // error
            ~
!!! error TS2717: Subsequent property declarations must have the same type.  Property 'x' has type 'T' at tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts 32:8, but here has type 'number'.
        }
    }